--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,17 @@ env:
 - PATH=$PATH:${HOME}/google-cloud-sdk/bin CLOUDSDK_CORE_DISABLE_PROMPTS=1
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_504ed2d281e6_key -iv $encrypted_504ed2d281e6_iv -in client-secret.json.enc -out client-secret.json -d
+- openssl aes-256-cbc -K $encrypted_c6c5dc38e110_key -iv $encrypted_c6c5dc38e110_iv
+  -in client-secret.json.enc -out client-secret.json -d
+- openssl aes-256-cbc -K $encrypted_504ed2d281e6_key -iv $encrypted_504ed2d281e6_iv
+  -in client-secret.json.enc -out client-secret.json -d
 - if [ ! -d ${HOME}/google-cloud-sdk ]; then
      curl https://sdk.cloud.google.com | bash;
   fi
 - gcloud auth activate-service-account --key-file client-secret.json
 
 install:
-- gcloud config set project test-project-271311
+- gcloud config set project second-raceway-201900
 
 script:
 - gcloud app deploy
