--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,7 @@ env:
 - PATH=$PATH:${HOME}/google-cloud-sdk/bin CLOUDSDK_CORE_DISABLE_PROMPTS=1
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_c6c5dc38e110_key -iv $encrypted_c6c5dc38e110_iv
-  -in client-secret.json.enc -out client-secret.json -d
-- openssl aes-256-cbc -K $encrypted_504ed2d281e6_key -iv $encrypted_504ed2d281e6_iv
-  -in client-secret.json.enc -out client-secret.json -d
+- openssl aes-256-cbc -K $encrypted_c6c5dc38e110_key -iv $encrypted_c6c5dc38e110_iv -in client-secret.json.enc -out client-secret.json -d
 - if [ ! -d ${HOME}/google-cloud-sdk ]; then
      curl https://sdk.cloud.google.com | bash;
   fi
